--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">SpendPal</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dashboard_greeting">Selamat Menjalani Hari</string>
+    <string name="dashboard_subtitlegreeting">Jangan lupa minum agar tetap fokus</string>
+    <string name="dashboard_todayagenda">Agenda Hari Ini</string>
+    <string name="dashboard_clearagenda">Hapus Agenda</string>
 </resources>
